fix scrollbar

--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -8,7 +8,6 @@ footer
         background-color: $nav-bg-color
         z-index: 10
         width: 100%
-        height: $nav-bar-height
         display: flex
         flex-direction: row
         justify-content: space-between
